crates/ir/tests/ir/snapshots/main__ir__lower__inference__let_poly.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__let_poly

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: (l11) -> l11 = make_closure(lambda$26, [])
  let v2: Int = call_closure v0(1)
  let v3: Bool = call_closure v0(true)
  let v4: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v5: Unit = call println(v4, v3)
  v5

fn lambda$26(v1: l11) -> l11 =
  v1
