crates/ir/tests/ir/snapshots/main__ir__lower__inference__monomorphism_let_poly_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__monomorphism_let_poly_ok

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: (i11) -> i11 = make_closure(lambda$26, [])
  let v2: Int = call_closure v0(42)
  let v3: Bool = call_closure v0(true)
  let_join v7(v5: Int) =
    let v4: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v6: Unit = call println(v4, v5)
    v6
  in
  if v3 {
    jump v7(v2)
  } else {
    jump v7(0)
  }

fn lambda$26(v1: i11) -> i11 =
  v1
