crates/ir/tests/ir/snapshots/main__ir__lower__inference__mutual_recursion.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__mutual_recursion

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn is_even(v0: Int) -> Bool =
  let_join v6(v3: Bool) =
    if v3 {
      true
    } else {
      let v4: Int = sub_int(v0, 1)
      let v5: Bool = call is_odd(v4)
      v5
    }
  in
  let v1: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v2: Bool = trait_call core/eq.Eq.eq(v1, v0, 0)
  jump v6(v2)

fn is_odd(v7: Int) -> Bool =
  let_join v13(v10: Bool) =
    if v10 {
      false
    } else {
      let v11: Int = sub_int(v7, 1)
      let v12: Bool = call is_even(v11)
      v12
    }
  in
  let v8: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v9: Bool = trait_call core/eq.Eq.eq(v8, v7, 0)
  jump v13(v9)
