crates/ir/tests/ir/snapshots/main__ir__lower__inference__recur_correct.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__recur_correct

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn countdown(v0: Int) -> Int =
  let_join [recur] v1(v2: Int) =
    let_join v7(v5: Bool) =
      if v5 {
        0
      } else {
        let v6: Int = sub_int(v2, 1)
        jump v1(v6)
      }
    in
    let v3: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v4: Bool = trait_call core/eq.Eq.eq(v3, v2, 0)
    jump v7(v4)
  in
  jump v1(v0)
