crates/ir/tests/ir/snapshots/main__ir__lower__inference__self_type_generic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__self_type_generic

struct Wrapper[x10] { value: x10 }
trait MyEq[o11] { my_eq(o11, o11): Bool }
instance inference__self_type_generic.MyEq[String] { my_eq=MyEq$$String$$my_eq }
instance inference__self_type_generic.MyEq[Wrapper$$Var0] { my_eq=MyEq$$Wrapper$$Var0$$my_eq }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Wrapper[String] = construct Wrapper("hello")
  let v1: Wrapper[String] = construct Wrapper("hello")
  let v3: Dict[inference__self_type_generic.MyEq, String] = get_dict inference__self_type_generic.MyEq[String]
  let v4: Dict[inference__self_type_generic.MyEq, Wrapper[String]] = make_dict inference__self_type_generic.MyEq[Wrapper[String]](v3)
  let v5: Bool = trait_call inference__self_type_generic.MyEq.my_eq(v4, v0, v1)
  let v2: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v6: Unit = call println(v2, v5)
  v6

fn MyEq$$String$$my_eq(v7: String, v8: String) -> Bool =
  let v9: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v10: Bool = trait_call core/eq.Eq.eq(v9, v7, v8)
  v10

fn MyEq$$Wrapper$$Var0$$my_eq(v11: Dict[inference__self_type_generic.MyEq, p11], v12: Wrapper[p11], v13: Wrapper[p11]) -> Bool =
  let v14: p11 = project v12.0
  let v15: p11 = project v13.0
  let v16: Bool = trait_call inference__self_type_generic.MyEq.my_eq(v11, v14, v15)
  v16
