crates/ir/tests/ir/snapshots/main__ir__lower__inference__self_type_impl.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__self_type_impl

struct Point { x: Int, y: Int }
trait MyEq[j8] { my_eq(j8, j8): Bool }
instance inference__self_type_impl.MyEq[Point] { my_eq=MyEq$$Point$$my_eq }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v0: Point = construct Point(1, 2)
  let v1: Point = construct Point(1, 2)
  let v3: Dict[inference__self_type_impl.MyEq, Point] = get_dict inference__self_type_impl.MyEq[Point]
  let v4: Bool = trait_call inference__self_type_impl.MyEq.my_eq(v3, v0, v1)
  let v2: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v5: Unit = call println(v2, v4)
  v5

fn MyEq$$Point$$my_eq(v6: Point, v7: Point) -> Bool =
  let_join v17(v12: Bool) =
    if v12 {
      let v13: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
      let v14: Int = project v6.1
      let v15: Int = project v7.1
      let v16: Bool = trait_call core/eq.Eq.eq(v13, v14, v15)
      v16
    } else {
      false
    }
  in
  let v8: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v9: Int = project v6.0
  let v10: Int = project v7.0
  let v11: Bool = trait_call core/eq.Eq.eq(v8, v9, v10)
  jump v17(v11)
